--- a/src/app/events/latest/latest.component.html
+++ b/src/app/events/latest/latest.component.html
@@ -1,7 +1,7 @@
 <main class="pageContainer">
     <!-- Floating Back Button -->
-    <div class="floating-back-button" [class.visible]="showFloatingButton()" (click)="navigateBack()">
-        <span class="back-icon">←</span>
+    <div class="floating-back-button" [class.visible]="showFloatingButton" (click)="navigateBack()">
+        <span class="material-symbols-outlined">arrow_back</span>
         <span class="button-text">Events</span>
     </div>
 
